# climate_dashboard

./: README.md  pyproject.toml
climate_dashboard/: app.py  figures.py  inspect_data.py
climate_dashboard/data/: realistic_ocean_climate_dataset.csv:Zone.Identifier
climate_dashboard/layout_utils/: layouts.py
